# content-tracker-exp

./: .gitignore
.claude/: .settings.json  CLAUDE.md
.claude/agents/: api-contract-extractor.md  seed-data-extractor.md
.claude/skills/implement-spec/: SKILL.md
.claude/skills/scaffold-endpoint/: SKILL.md
.claude/skills/telusko-status/: SKILL.md
backend/: .env.example  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 89cde173471b_add_users_table.py  d9642d9e32fe_create_tasks_table.py
backend/app/: main.py
backend/app/api/v1/: auth.py  tasks.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/routes/: tasks.py
backend/app/schemas/: auth.py  task.py  user.py
backend/app/security/: __init__.py  dependencies.py  jwt.py  password.py
backend/app/services/: task_service.py
backend/tests/: conftest.py  test_tasks.py
frontend/: app.js
specs/: api-contract.md  seed-data.json
specs/features/: task-filtering.md
specs/security/: security-spec.md
